<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rizwanmahmood.morsekeyboard.activities.SettingsActivity">

    <TextView
        android:id="@+id/settings_textview_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/general_padding"
        android:text="@string/main_head_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/general_head_textsize"/>

    <Button
        android:id="@+id/settings_button_resetscore"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_button_margin"
        android:layout_weight="1"
        android:background="@drawable/tap_key"
        android:text="@string/settings_button_resetscore_text"
        android:textColor="@color/blueAccent" />

    <Button
        android:id="@+id/settings_button_resetlevelscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_button_margin"
        android:layout_weight="1"
        android:background="@drawable/tap_key"
        android:text="@string/settings_button_resetlevelscore_text"
        android:textColor="@color/blueAccent" />



</LinearLayout>
