<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/confirm_textview_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/general_padding"
        android:text="@string/confirm_head_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/general_head_textsize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/general_margin">

        <Button
            android:id="@+id/confirm_button_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/general_margin_half"
            android:layout_weight="1"
            android:background="@drawable/tap_key"
            android:text="@string/confirm_button_no_text"
            android:textColor="@color/blueAccent" />

        <Button
            android:id="@+id/confirm_button_yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/general_margin_half"
            android:layout_weight="1"
            android:background="@drawable/tap_key"
            android:text="@string/confirm_button_yes_text"
            android:textColor="@color/blueAccent" />
    </LinearLayout>

</LinearLayout>